ubsan: mulnode.cpp:862:59: runtime error: shift exponent 64 is too large for 64-bit type 'long unsigned int'

XMLWordPrintable

    • b21
    • x86_64
    • linux

      When running on Linux x86_64 with ubsan enabled binaries, the following error is reported in a couple of tests , e.g.

      java/foreign/StdLibTest.java
      java/foreign/TestAccessModes.java
      java/foreign/TestUpcallStack.java
      java/lang/invoke/LFCaching/LFSingleThreadCachingTest.java
      java/lang/invoke/VarHandles/VarHandleTestMethodHandleAccessInt.java
      java/lang/invoke/PermuteArgsTest.java

      /jdk/src/hotspot/share/opto/mulnode.cpp:862:59: runtime error: shift exponent 64 is too large for 64-bit type 'long unsigned int'
          #0 0x7fd09fa03391 in AndLNode::Ideal(PhaseGVN*, bool) src/hotspot/share/opto/mulnode.cpp:862
          #1 0x7fd0a2655bef in PhaseGVN::apply_ideal(Node*, bool) src/hotspot/share/opto/phaseX.cpp:668
          #2 0x7fd0a2655bef in PhaseIterGVN::transform_old(Node*) src/hotspot/share/opto/phaseX.cpp:1198
          #3 0x7fd0a263a585 in PhaseIterGVN::optimize() src/hotspot/share/opto/phaseX.cpp:1046
          #4 0x7fd0a0b6a2e8 in PhaseIdealLoop::optimize(PhaseIterGVN&, LoopOptsMode) src/hotspot/share/opto/loopnode.hpp:1208
          #5 0x7fd0a0b614f9 in Compile::Optimize() src/hotspot/share/opto/compile.cpp:2318
          #6 0x7fd0a0b6551a in Compile::Compile(ciEnv*, ciMethod*, int, Options, DirectiveSet*) src/hotspot/share/opto/compile.cpp:852
          #7 0x7fd0a079e948 in C2Compiler::compile_method(ciEnv*, ciMethod*, int, bool, DirectiveSet*) src/hotspot/share/opto/c2compiler.cpp:142
          #8 0x7fd0a0b7b7f4 in CompileBroker::invoke_compiler_on_method(CompileTask*) src/hotspot/share/compiler/compileBroker.cpp:2303
          #9 0x7fd0a0b7de86 in CompileBroker::compiler_thread_loop() src/hotspot/share/compiler/compileBroker.cpp:1961
          #10 0x7fd0a163203a in JavaThread::thread_main_inner() src/hotspot/share/runtime/javaThread.cpp:757
          #11 0x7fd0a2e6c9ca in Thread::call_run() src/hotspot/share/runtime/thread.cpp:225
          #12 0x7fd0a24df3e1 in thread_native_entry src/hotspot/os/linux/os_linux.cpp:858
          #13 0x7fd0a76496e9 in start_thread (/lib64/libpthread.so.0+0xa6e9) (BuildId: 9a146bd267419cb6a8cf08d7c602953a0f2e12c5)
          #14 0x7fd0a6f5258e in clone (/lib64/libc.so.6+0x11858e) (BuildId: f2d1cb1ef49f8c47d43a4053910ba6137673ccce)

            Assignee:
            Marc Chevalier
            Reporter:
            Matthias Baesken
            Votes:
            0 Vote for this issue
            Watchers:
            6 Start watching this issue

              Created:
              Updated:
              Resolved: